# CHIP-8-Emulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/include/: chip8.cpp  chip8.hpp  utils.cpp  utils.hpp
src/includes/: CHIP-8.hpp
